* https://github.com/devonfw/ide/issues/1177[#1177]: Azure installation with MSI   
* https://github.com/devonfw/ide/issues/1147[#1147]: Separates plugins from software folder
* https://github.com/devonfw/ide/issues/1158[#1158]: Projects main-branch is always checked out
* https://github.com/devonfw/ide/issues/1118[#1118]: Add milestone versions of Eclipse

The full list of changes for this release can be found in https://github.com/devonfw/ide/milestone/44?closed=1[milestone 2023.05.001].

== 2023.04.001

Release with new features and bugfixes:

* https://github.com/devonfw/ide/issues/1065[#1065]: compute checksum of binary downloads
* https://github.com/devonfw/ide/issues/1076[#1076]: Fix extraction error in doReplaceExtractedSkipSingleFolder()
* https://github.com/devonfw/ide/issues/1054[#1054]: automated security warnings
* https://github.com/devonfw/ide/issues/1039[#1039]: Add support for Kotlin.
* https://github.com/devonfw/ide/issues/1080[#1080]: auto-configure IntelliJ core settings
* https://github.com/devonfw/ide/issues/1104[#1104]: IntelliJ plugin installation not working
* https://github.com/devonfw/ide/issues/1099[#1099]: progress output when project is cloned
* https://github.com/devonfw/ide/issues/1098[#1098]: devon node version set buggy

The full list of changes for this release can be found in https://github.com/devonfw/ide/milestone/43?closed=1[milestone 2023.04.001].

== 2023.03.003

Release with new features and bugfixes:

* https://github.com/devonfw/ide/issues/1074[#1074]: Fix vscode plugin installation

The full list of changes for this release can be found in https://github.com/devonfw/ide/milestone/42?closed=1[milestone 2023.03.003].

== 2023.03.002

Release with new features and bugfixes:

* https://github.com/devonfw/ide/issues/1071[#1071]: devon.bat sets wrong user PATH in Windows system environment settings
