@@ -60,6 +60,8 @@ include::kotlinc.asciidoc[leveloffset=3]
 
 include::kotlinc-native.asciidoc[leveloffset=3]
 
+include::tomcat.asciidoc[leveloffset=3]
+
 include::kubectl.asciidoc[leveloffset=3]
 
 include::lazydocker.asciidoc[leveloffset=3]
