@@ -46,6 +46,7 @@ This directory is the heart of the `devonfw-ide` and contains the required link:
 │  ├── link:rewrite.asciidoc[rewrite]
 │  ├── link:sonar.asciidoc[sonar]
 │  ├── link:terraform.asciidoc[terraform]
+│  ├── link:tomcat.asciidoc[tomcat]
 │  ├── link:vscode.asciidoc[vscode]
 │  └── link:yarn.asciidoc[yarn]
 ├── link:cli.asciidoc[devon]
