@@ -1,0 +1,17 @@
+:toc:
+toc::[]
+
+= Tomcat
+
+The `Tomcat` commandlet allows to install install, configure, and launch https://tomcat.apache.org/[tomcat].
+
+The arguments (`devon tomcat «args»`) are explained by the following table:
+
+.Usage of `devon tomcat`
+[options="header"]
+|=======================
+|*Argument(s)*      |*Meaning*
+|`setup`            |setup Tomcat (install or update and verify),  via `TOMCAT_VERSION` (use `devon tomcat version list` to get available versions or `devon tomcat version set [TAB]` to set version with auto-completion)
+|`start`            |start Tomcat
+|`stop`             |stop Tomcat
+|=======================
