@@ -12,6 +12,7 @@ Release with new features and bugfixes:
 * https://github.com/devonfw/ide/issues/1147[#1147]: Separates plugins from software folder
 * https://github.com/devonfw/ide/issues/1158[#1158]: Projects main-branch is always checked out
 * https://github.com/devonfw/ide/issues/1118[#1118]: Add milestone versions of Eclipse
+* https://github.com/devonfw/ide/issues/1143: Add support for Tomcat
 
 The full list of changes for this release can be found in https://github.com/devonfw/ide/milestone/44?closed=1[milestone 2023.05.001].
 
